Reduced font size in navbar to fix IE wrapping elements

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -7489,12 +7489,12 @@ body.navbar-is-fixed-bottom {
 .navbar-fixed-bottom .navbar-collapse {
   max-height: none;
 }
-@media (min-width: 768px) and (max-width: 1119px) {
+@media (min-width: 768px) and (max-width: 1153px) {
   .navbar {
-    font-size: 1.34vw;
+    font-size: 1.3vw;
   }
 }
-@media (min-width: 1120px) {
+@media (min-width: 1154px) {
   .navbar {
     font-size: 0.83333333em;
   }
