--- a/docroot/themes/iucn_who/less/component/navbar.less
+++ b/docroot/themes/iucn_who/less/component/navbar.less
@@ -106,7 +106,7 @@ body.navbar-is-static-top {
   max-height: none;
 }
 @navbar-font-size-em: 15 / unit(@font-size-base) * 1em;
-@navbar-min-size-to-fit: 1.34;
+@navbar-min-size-to-fit: 1.3;
 @max-vw: (floor(unit(@font-size-base) * unit(@navbar-font-size-em) * 100 / @navbar-min-size-to-fit) * 1px); // @navbar-min-size-to-fit is minimum vw required to fit content of navbar on one line
 .navbar {
   @media (min-width: @grid-float-breakpoint) and (max-width: @max-vw) {
